--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -17,3 +17,6 @@ jobs:
 
     - name: Install and run checks
       run: mvn test
+
+    - name: Install and run queries
+      run: mvn test -PallTests
